# cn_cdc_crawl

./: .gitignore  PROJECT_STRUCTURE.md  README.md  cn_cdc_surveillance.csv  cn_cdc_surveillance_handmade.csv  convert_pdf_to_md.py  covid_only_updated_surveillance_data.csv  extract_data_from_md.py  extract_surveillance_data.py  generate_interactive_plot.py  preview_interactive.sh  pyproject.toml  requirements.txt  run.sh  update_data.sh  url_surveillance.txt  url_surveillance_history.txt  web_2_pdf_PlayWright.py
config/: paths.py  url_covid19.txt  url_surveillance_history.txt  url_surveillance_new.txt
data/: cncdc_surveillance_all.csv  cncdc_surveillance_covid19.csv  cncdc_suverillance_2025_14_22.csv  covid_only_updated_surveillance_data.csv  updated_surveillance_data.csv
docs/: INTERACTIVE_CHART_GUIDE.md  QUICKSTART.md  QUICKSTART_INTERACTIVE.md  SETUP.md  covid19_interactive.html  index.html
md/: t20240827_295729.md  t20241025_302085.md  t20241025_302086.md  t20241111_302498.md  t20241112_302583.md  t20241112_302587.md  t20241121_302759.md  t20241211_303253.md  t20250324_305223.md  t20250327_305494.md  t20250513_306737.md  t20250605_307352.md  t20250611_307561.md  t20250619_307862.md  t20250703_308172.md  t20250710_308275.md  t20250814_309303.md  t20250820_309612.md  t20250925_312625.md  t20251002_312839.md
md_covid19/: t20240827_295725.md  t20240827_295727.md  t20240912_299501.md  t20241025_302084.md  t20241025_302088.md  t20241025_302091.md  t20241112_302569.md  t20241112_302575.md  t20241112_302578.md  t20241112_302579.md  t20241112_302580.md  (+7 more)
(+131 files in other folders)
