[project]
name = "cn-cdc-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "lxml>=6.0.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.1",
]
